padding, margins, etc

--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,12 +1,24 @@
-h1{
-    color:#6a5acd;
-    /* font-size: 96px;  this represents absolute length - does not change with the size of the browser*/
-    /* px, rm, rem, and % */
-    /* best practice is to not use absolute values for font sizes as they cannot be resized easi;y */
-    font-size: 2em;
+h1 {
+  color: #6a5acd;
+  /* font-size: 96px;  this represents absolute length - does not change with the size of the browser*/
+  /* px, rm, rem, and % */
+  /* best practice is to not use absolute values for font sizes as they cannot be resized easi;y */
+  font-size: 2em;
 }
 
-a{
-    font-size: 1em;
-   
+a {
+  font-size: 1em;
+}
+
+.box-2 p {
+  color: #ffffff;
+}
+
+a {
+  /* display: inline; - cannot give them a width and a height, or margintop and bottom - depends on content when the element is inline */
+  /* does weird padding - bleeds/ goes over other elements  */
+  background-color: red;
+  color: white;
+  width: 200px;
+  height: 100px;
 }
