--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
+/* @import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css"); */
 @import url("./global.css");
 @import url("./components.css");
 @import url("./typography.css");
